@startuml

title __LAB_BUILDER's Class Diagram__\n

  namespace  {
    namespace om.example.lab_builder {
      class com.example.lab_builder.HelloApplication {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace  {
    namespace om.example.lab_builder {
      class com.example.lab_builder.HelloController {
          + MyPane : Pane
          + timeField : TextField
          - localTime : LocalTime
          - welcomeText : Label
          + Start()
          + setFill()
          # onHelloButtonClick()
      }
    }
  }
  

  com.example.lab_builder.HelloApplication -up-|> javafx.application.Application
  com.example.lab_builder.HelloController o-- com.example.lab_builder.model.ConcreteBuilder : builder
  com.example.lab_builder.HelloController o-- com.example.lab_builder.model.Director : director


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
